Fixed issues with svg stretching in internet explorer.

--- a/doc/source/_static/sass/authomatic.sass
+++ b/doc/source/_static/sass/authomatic.sass
@@ -66,7 +66,7 @@ $admonition-3-header-bg: $pink
       padding: $padding * 2
       padding-bottom: $padding * 2.5
       margin: 0em
-      max-width: 100%
+      width: 100%
       height: auto
   
   #motto
